--- a/01_First_SpringSecurityProject/src/main/resources/application.properties
+++ b/01_First_SpringSecurityProject/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=01_First_SpringSecurityProject
+
+##Spring Security Configuration
+spring.security.user.name=rahul
+spring.security.user.password=rahul@123
+spring.security.user.roles=ADMIN,GUEST
