--- a/06_SpringSecurityProject_JWT/pom.xml
+++ b/06_SpringSecurityProject_JWT/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>jjwt-impl</artifactId>
             <version>0.12.5</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson -->
         <dependency>
